--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Calorificator</string>
+    <string name="app_name">CaloriFyi</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="title_activity_camera">CameraActivity</string>
     <string name="title_activity_model">ModelActivity</string>
