--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="Desc2">Know the calorie value just by clicking a picture or searching the food.</string>
     <string name="Desc3">Add and manage the foods that you take and maintain your diet.</string>
     <string name="Desc1">Keep the health in check and get recommendations of what do you want to eat.</string>
+    <string name="title_activity_reception">ReceptionActivity</string>
 </resources>
